[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "laplace_interpolator"
version = "0.0.1"
authors = [
  { name="Santiago Federico Caracciolo", email="santiago.caracciolo@gmail.com" },
]
description = "Laplace interpolator based on "Interpolation on a triangulated 3D surface" paper written by Thom F. Oostendorp et al."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "scipy"
]